<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/about"
		android:text="@string/about"
		android:textSize="48px"
	/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="500px"
		android:id="@+id/content"
		android:layout_below="@+id/about"
		
	>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/article"
		>
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/title"
				android:textSize="48px"
		    />
	        <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:layout_below="@+id/title"
			    android:id="@+id/body"
				android:textSize="28px"
		    />
		    <TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
				android:layout_below="@+id/body"
			    android:id="@+id/author"
				android:textSize="16px"
		    />
		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/text"
				android:text="@string/credits"
			/>
		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/version"
				android:text="@string/version"
				android:layout_below="@+id/text"
			/>
	    </RelativeLayout>
	</ScrollView>
    <Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/ic_action_fast_forward"
		android:id="@+id/nextArticleButton"
		android:onClick="button_Click"
		android:layout_below="@+id/content"
		android:layout_marginLeft="200px"
	/>
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/forumText"
	/>
    
</RelativeLayout>
